# PYGE

./: .gitignore  CMakeLists.txt  NOTICE  README  README.en.md  README.md  cmake_build.sh  data_generate.py  ge.cpp  graph_utils.py  main.py  main_with_OpFactory.py  op.cpp
mnist/: mnist.py  test_mnist.py
mnist_v2/: data_generate.py  mnist.py  readMe  test_mnist.py
mnist_v3/: mnist.py  test_mnist.py
